--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:fragment="navBar">
   <div class="container-fluid">
     <a href="#" th:href="@{/}">
-      <img alt="Picto Logo" src="../static/images/Logo.png" class="logo" />
+      <img alt="Picto Logo" src="/images/Logo.png" class="logo" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,10 +17,13 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" th:classappend="${module == 'customers' ? 'active' : ''}" href="#" th:href="@{/compte}">Mon compte</a>
+          <a class="nav-link" th:classappend="${module == 'compte' ? 'active' : ''}" href="#" th:href="@{/compte}">Mon compte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:classappend="${module == 'orders' ? 'active' : ''}" href="#" th:href="@{/patients}">Mes patients</a>
+          <a class="nav-link" th:classappend="${module == 'patients' ? 'active' : ''}" href="#" th:href="@{/patients}">Mes patients</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:classappend="${module == 'session' ? 'active' : ''}" href="#" th:href="@{/session}">Démarrer une session</a>
         </li>
       </ul>
     </div>
