--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:fragment="navBar">
   <div class="container-fluid">
     <a href="#" th:href="@{/}">
-      <img alt="Picto Logo" src="/images/Logo.png" class="logo" />
+      <img alt="Picto Logo" src="/images/Logo PNG.png" class="logo" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
