--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -4,26 +4,33 @@
   <meta charset="UTF-8">
   <title>Header</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:fragment="navBar">
+<nav class="navbar navbar-expand-md navbar-dark mb-4"  th:fragment="navBar">
   <div class="container-fluid">
     <a href="#" th:href="@{/}">
       <img alt="Picto Logo" src="/images/Logo PNG.png" class="logo" />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" th:classappend="${module == 'compte' ? 'active' : ''}" href="#" th:href="@{/compte}">Mon compte</a>
+          <a class="nav-link" th:href="@{/compte}">Mon compte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:classappend="${module == 'patients' ? 'active' : ''}" href="#" th:href="@{/patients}">Mes patients</a>
+          <a class="nav-link" th:href="@{/patients}">Mes patients</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:classappend="${module == 'session' ? 'active' : ''}" href="#" th:href="@{/session}">Démarrer une session</a>
+          <a class="nav-link" th:href="@{/session}">Démarrer une session de travail</a>
         </li>
       </ul>
     </div>
