--- a/src/main/resources/templates/session.html
+++ b/src/main/resources/templates/session.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css"/>
-  <title>Page Echanges</title>
+  <title>Session</title>
 </head>
 <body>
   <div th:replace="~{components/navBar :: navBar}"></div>
-    <h1 th:text="${message}"></h1>
+  <h1 th:text="${message}"></h1>
 </body>
-<div th:replace="~{components/footer :: footer}"></div>
+  <div th:replace="~{components/footer :: footer}"></div>
 </html>
