--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" th:fragment="navBar">
 <head>
   <meta charset="UTF-8">
   <title>Header</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css"/>
+  <link rel="stylesheet" href="/css/navbar.css"/>
 </head>
-<body>
-<nav class="navbar navbar-expand-md navbar-dark mb-4"  th:fragment="navBar">
+<header>
+<nav class="navbar navbar-expand-md navbar-dark mb-4"  >
   <div class="container-fluid">
     <a href="#" th:href="@{/}">
       <img alt="Picto Logo" src="/images/Logo PNG.png" class="logo" />
@@ -24,18 +24,21 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ms-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/compte}">Mon compte</a>
+          <a class="nav-link" th:classappend="${module == 'echange' ? 'active' : ''}" th:href="@{/echange}">Echange</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/patients}">Mes patients</a>
+          <a class="nav-link" th:classappend="${module == 'compte' ? 'active' : ''}" th:href="@{/compte}">Mon compte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/session}">Démarrer une session de travail</a>
+          <a class="nav-link" th:classappend="${module == 'patients' ? 'active' : ''}" th:href="@{/patients}">Mes patients</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:classappend="${module == 'session' ? 'active' : ''}" th:href="@{/session}">Démarrer une session de travail</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-</body>
+</header>
 </html>
