--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css"/>
   <title>Page Echanges</title>
+  <link rel="stylesheet" href="/css/dragDropItem.css"/>
 </head>
 <body>
   <div th:replace="~{components/navBar :: navBar}"></div>
-    <h1 th:text="${message}"></h1>
+
+  <ul class="source">
+    <li th:each="mot : ${mots}"
+        class="item"
+        th:style="'background-image:url('+@{'/images/'+${mot.pictoFile}}+')'">
+      <span class="closer">x</span>
+    </li>
+  </ul>
+
+
+
+  <ul class="target" id="sortable">
+    <li class="empty"></li>
+    <li class="empty"></li>
+    <li class="empty"></li>
+    <li class="empty"></li>
+    <li class="empty"></li>
+  </ul>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  <script src="/js/dragAndDrop.js"></script>
 </body>
 <div th:replace="~{components/footer :: footer}"></div>
 </html>
