DropDown sous-catégorie OK

--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ms-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" th:classappend="${module == 'ajoutMot' ? 'active' : ''}" th:href="@{/ajouterUnMot}">Ajouter un mot</a>
+          <a class="nav-link" th:classappend="${module == 'gestionDesMots' ? 'active' : ''}" th:href="@{/gestionDesMots}">Gestion des mots</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:classappend="${module == 'echange' ? 'active' : ''}" th:href="@{/echange}">Echange</a>
