--- a/src/main/resources/templates/gestionDesMots.html
+++ b/src/main/resources/templates/gestionDesMots.html
@@ -3,7 +3,7 @@
 <head>
     <title>Ajouter un mot</title>
     <link rel="stylesheet" href="/css/ajoutMot.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+
 </head>
 <body>
 <div th:replace="~{components/navBar :: navBar}"></div>
@@ -18,15 +18,20 @@
          <input placeholder="Nouveau mot à ajouter" type="text" id="nomMotAjout" name="nomMotAjout"/>
       </div>
       <br>
-      <div>
-          <select th:field="${selectedCategorie}">
+
+          <select id="categorie" th:field="${selectedCategorie}">
               <option value="" >Choisir une catégorie</option>
-              <option th:each="category : ${categories}"
-                      th:value="${category}"
-                      th:text="${category.nom}">
+              <option th:each="categorie : ${categories}"
+                      th:value="${categorie}"
+                      th:categorieId="${categorie.id}"
+                      th:text="${categorie.nom}">
               </option>
           </select>
-      </div>
+
+           <div id="sousCategorie">
+
+           </div>
+
       <br>
         <div>
          <input placeholder="Nom du fichier image" type="text" id="pictoFile" name="pictoFile"/>
@@ -65,8 +70,11 @@
 
 <div th:replace="~{components/footer :: footer}"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/checkboxFilter.js"></script>
+<script src="/js/recupSousCategories.js"></script>
+
+
 </body>
 </html>
