--- a/src/main/resources/templates/gestionDesMots.html
+++ b/src/main/resources/templates/gestionDesMots.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Ajouter un mot</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/ajoutMot.css"/>
-
 </head>
 <body>
 <div th:replace="~{components/navBar :: navBar}"></div>
@@ -27,13 +27,18 @@
               <option value="-1" >Choisir une catégorie</option>
               <option th:each="categorie : ${categories}"
                       th:value="${categorie.id}"
-                      th:text="${categorie.nom}">
+                      th:text="${categorie.nom}"
+                      th:sousCat="${categorie.listeSousCategorie.size()}">
               </option>
           </select>
       <br>
-           <select name="sousCategorieId" id="sousCategorie" class="hidden">
 
-           </select>
+        <div class="hidden mt-3" id="divSousCat">
+            <select name="sousCategorieId" id="sousCategorie">
+                <option value="-1" ></option>
+            </select>
+        </div>
+
 
       <br>
         <div>
@@ -51,8 +56,8 @@
                   <input class="tags"
                          th:id="${tag.nom}"
                          type="checkbox"
-                         th:field="*{tags}"
-                         th:value="${tag.nom}" />
+                         th:value="${tag.nom}"
+                         name="selectedTags"/>
                   <label th:text="${tag.nom}"></label>
               </li>
           </ul>
