selection formulaire irregulier OK

--- a/src/main/resources/templates/gestionDesMots.html
+++ b/src/main/resources/templates/gestionDesMots.html
@@ -63,7 +63,11 @@
           </ul>
       </div>
         <br>
-        <div class="hidden">
+
+        <div id="formulaireIrregulier">
+        </div>
+
+  <!--      <div class="hidden">
             <div th:replace="~{components/formulairesIrreguliers :: verbeIrregulier('irregulier.conjugaisons','irregulier.participePasse')}"/>
         </div>
 
@@ -74,7 +78,7 @@
         <div class="hidden">
             <div th:replace="~{components/formulairesIrreguliers :: adjectifIrregulier('irregulier.feminin','irregulier.pluriel')}"/>
         </div>
-
+                -->
         <br>
             <button type="submit">Ajouter</button>
     </form>
