--- a/src/main/resources/static/css/dragDropItem.css
+++ b/src/main/resources/static/css/dragDropItem.css
@@ -33,6 +33,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  border-radius:20%;
 }
 
 .item2 {
@@ -46,6 +47,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  border-radius:20%;
 }
 
 .item .closer {
@@ -88,6 +90,7 @@
   padding: 5px;
   background: #eee;
   border: 1px dashed #999;
+  border-radius:20%;
 }
 
 .empty .item {
