--- a/src/main/resources/templates/ajouterUneQuestion.html
+++ b/src/main/resources/templates/ajouterUneQuestion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-    <title>Page Création dossier médical</title>
+    <title>Page Création Question</title>
 </head>
 <body>
 <div th:replace="~{components/navBar}"></div>
