maj mapping entités

--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -94,10 +94,10 @@ body {
 							médicaux</a>
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item"
-								href="/gestionDesDossiers/consulterLesDossiers">Consulter
+								href="/consulterLesDossiers">Consulter
 									les dossiers</a></li>
 							<li><a class="dropdown-item"
-								href="/gestionDesDossiers/ajouterUnDossier">Ajouter un
+								href="/ajouterUnDossier">Ajouter un
 									dossier</a></li>
 						</ul></li>
 
