--- a/src/main/resources/templates/detailsDossier.html
+++ b/src/main/resources/templates/detailsDossier.html
@@ -12,11 +12,11 @@
         <div class="card-body">
             <h3 class="card-title">Informations du dossier médical du patient</h3>
             <br>
-            <h5 class="card-subtitle" th:text="'Progression: ' + ${DossierMedical.progression}">Service</h5>
-            <a th:text="'Nom: ' + ${DossierMedical.nom}">Nom</a><br>
-            <a th:text="'Prénom: ' + ${DossierMedical.prenom}">Prénom</a><br>
-            <a th:text="'Date de naissance: ' + ${DossierMedical.dateNaissance}">Date de naissance</a><br>
-            <p th:text="'Statistique: ' + ${DossierMedical.statistique}">Statistiques</p>
+            <h5 class="card-subtitle" th:text="'Progression: ' + ${dossierMedical.progression}">Service</h5>
+            <a th:text="'Nom: ' + ${dossierMedical.nom}">Nom</a><br>
+            <a th:text="'Prénom: ' + ${dossierMedical.prenom}">Prénom</a><br>
+            <a th:text="'Date de naissance: ' + ${dossierMedical.dateNaissance}">Date de naissance</a><br>
+            <p th:text="'Statistique: ' + ${dossierMedical.statistique}">Statistiques</p>
         </div>
     </div>
     <div class="container" >
