--- a/src/main/resources/templates/components/formulaireModifierMot.html
+++ b/src/main/resources/templates/components/formulaireModifierMot.html
@@ -1,10 +1,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-
+<!--th:action="@{/gestionDesMots/modifierUnMot}"
+    th:method="post"
+-->
 <form class="d-flex"
+      id="formulaireModifMot"
       th:fragment="formulaireMot"
       th:action="@{/gestionDesMots/modifierUnMot}"
-      method="post"
+      th:method="post"
       th:object="${mot}">
     <div class="container">
         <div class="row">
@@ -43,7 +46,8 @@
                                 th:text="${sousCategorie.nom}"
                                 th:selected="${mot.sousCategorie.id == sousCategorie.id}">
                         </option>
-                        <option th:if="${mot.sousCategorie == null}">
+                        <option th:if="${mot.sousCategorie == null}"
+                                th:value="-1">
                             Pas de sous-catégorie
                         </option>
                     </select>
@@ -83,16 +87,20 @@
           <div id="formulaireIrregulier" class="col-12 col-lg-5"></div>
             <br>
         </div>
-        <div class="row">
-            <button type="submit"
-                    class="btn btn-primary">
-                Valider les modifications
-            </button>
+        <div class="row ">
+            <div class="d-flex justify-content-center">
+                <button type="submit"
+                        id="submitModifMot"
+                        class="btn btn-primary mx-auto">
+                    Valider les modifications
+                </button>
+            </div>
+
         </div>
     </div>
 </form>
 
-
+<script src="/js/modifierUnMot.js"></script>
 
 
 
