--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <title>Page Echanges</title>
-  <link rel="stylesheet" href="/css/dragDropItem.css"/>
-
 </head>
+
 <body>
   <div th:replace="~{components/navBar}"></div>
 
-  <ul class="source">
-    <li th:each="mot : ${mots}"
-        class="item"
-        th:style="'background-image:url('+@{'/images/Mots/'+${mot.pictoFile}}+')'">
-      <span class="closer">x</span>
-    </li>
-  </ul>
+  <div th:replace="~{components/listeItemsCategories}"></div>
 
-  <ul class="target" id="sortable">
-    <li class="empty"></li>
-    <li class="empty"></li>
-    <li class="empty"></li>
-    <li class="empty"></li>
-    <li class="empty"></li>
-  </ul>
+ <!-- <div th:replace="~{components/dragAndDrop}"></div> -->
 
-<div th:replace="~{components/footer :: footer}"></div>
-<script src="/js/dragAndDrop.js"></script>
+  <div th:replace="~{components/footer :: footer}"></div>
+
+  <script src="/js/dragAndDrop.js"></script>
+  <script src="/js/recupSousCategories.js"></script>
 </body>
+
 </html>
