--- a/src/main/resources/templates/ajouterUnMot.html
+++ b/src/main/resources/templates/ajouterUnMot.html
@@ -80,7 +80,7 @@
 
 
 <script src="/js/checkboxFilter.js"></script>
-<script src="/js/recupSousCategories.js"></script>
+<script src="/js/recupParCategorie.js"></script>
 
 
 </body>
