--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -8,7 +8,7 @@
 <body>
   <div th:replace="~{components/navBar}"></div>
 
-  <div th:replace="~{components/listeItemsCategories}"></div>
+  <div th:replace="~{components/pictosPageEchange}"></div>
 
  <!-- <div th:replace="~{components/dragAndDrop}"></div> -->
 
@@ -16,7 +16,7 @@
   <div th:replace="~{components/footer :: footer}"></div>
 
   <script src="/js/dragAndDrop.js"></script>
-  <script src="/js/recupSousCategories.js"></script>
+  <script src="/js/recupParCategorie.js"></script>
 </body>
 
 </html>
