--- a/src/main/resources/templates/components/pictosPageEchange.html
+++ b/src/main/resources/templates/components/pictosPageEchange.html
@@ -25,10 +25,8 @@
 <!--Catégories-->
 
 <!--Sous-catégories-->
-    <div id="divSousCatItem"
-         class="hidden justify-content-center" >
-        <ul id="sousCategorieItem"
-            class="itemBox" >
+    <div id="divSousCatItem" class="hidden justify-content-center" >
+        <ul id="sousCategorieItem" class="itemBox" >
         </ul>
     </div>
 <!--Sous-catégories-->
@@ -37,7 +35,7 @@
     <div id="divMotItem"
          class="hidden justify-content-center" >
         <ul id="motItem"
-            class="itemBox" >
+            class="itemBox source" >
         </ul>
     </div>
 <!--Mots-->
