--- a/src/main/resources/templates/components/dragAndDrop.html
+++ b/src/main/resources/templates/components/dragAndDrop.html
@@ -4,6 +4,7 @@
     </head>
 
     <body>
+      <!--
         <div class="d-flex justify-content-center">
             <ul class="source" >
                 <li th:each="mot : ${mots}"
@@ -13,7 +14,15 @@
                 </li>
             </ul>
         </div>
-        <ul class="target" id="sortable">
+     -->
+
+        <ul class="target d-flex justify-content-center"
+            id="sortable">
+            <li class="empty"></li>
+            <li class="empty"></li>
+            <li class="empty"></li>
+            <li class="empty"></li>
+            <li class="empty"></li>
             <li class="empty"></li>
             <li class="empty"></li>
             <li class="empty"></li>
