--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -10,7 +10,7 @@
 
   <div th:replace="~{components/pictosPageEchange}"></div>
 
- <!-- <div th:replace="~{components/dragAndDrop}"></div> -->
+  <div th:replace="~{components/dragAndDrop}"></div>
 
 
   <div th:replace="~{components/footer :: footer}"></div>
