construction phrase sans correction OK

--- a/src/main/resources/templates/components/dragAndDrop.html
+++ b/src/main/resources/templates/components/dragAndDrop.html
@@ -4,31 +4,15 @@
     </head>
 
     <body>
-      <!--
-        <div class="d-flex justify-content-center">
-            <ul class="source" >
-                <li th:each="mot : ${mots}"
-                    class="item"
-                    th:style="'background-image:url('+@{'/images/Mots/'+${mot.pictoFile}}+')'">
-                    <span class="closer">x</span>
-                </li>
-            </ul>
-        </div>
-     -->
-
-        <ul class="target d-flex justify-content-center"
-            id="sortable">
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
-            <li class="empty"></li>
+        <ul class="target d-flex justify-content-center" id="sortable">
+                <li class="empty"></li>
+                <li class="empty"></li>
+                <li class="empty"></li>
+                <li class="empty"></li>
+                <li class="empty"></li>
+                <li class="empty"></li>
+                <li class="empty"></li>
+                <li class="empty"></li>
         </ul>
-
     </body>
 </html>
