--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -12,8 +12,12 @@
 
   <div th:replace="~{components/dragAndDrop}"></div>
 
+  <div class="d-flex justify-content-center">
+    <span id="contenuPhrase"></span>
+  </div>
 
   <div th:replace="~{components/footer :: footer}"></div>
+
 
   <script src="/js/dragAndDrop.js"></script>
   <script src="/js/recupParCategorie.js"></script>
