--- a/src/main/resources/static/css/dragDropItem.css
+++ b/src/main/resources/static/css/dragDropItem.css
@@ -5,7 +5,6 @@
 .source,
 .target {
   margin: 20px;
-  border: 1px solid green;
   display:flex;
 }
 
@@ -16,10 +15,6 @@
       overflow: hidden;
       overflow-x: scroll;
       display:-webkit-inline-box;
-}
-
-.target {
-  border: 1px solid blue;
 }
 
 .item {
@@ -71,6 +66,7 @@
   right: 5px;
   top: 2px;
   font: bold 14px arial;
+  opacity:0;
   color: #666;
   padding: 1px 3px;
   line-height: 1;
@@ -80,6 +76,7 @@
 }
 
 .item2 .closer:hover {
+  opacity:0.5;
   color: #000;
 }
 
@@ -118,3 +115,4 @@
 ul {
   list-style-type: none;
 }
+
