--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -9,6 +9,8 @@
 	rel="stylesheet"
 	integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
 	crossorigin="anonymous">
+<link rel="stylesheet"
+	  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 <style type="text/css">
 body {
@@ -17,7 +19,7 @@ body {
 </style>
 </head>
 <header>
-	<nav class="navbar navbar-expand-md navbar-dark mb-4 fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark fixed-top">
 		<div class="container-fluid">
 			<a href="#" th:href="@{/}"> <img alt="Picto Logo"
 				src="/images/Logos/Logo PNG.png" class="logo" />
